--- a/Style.CSS
+++ b/Style.CSS
@@ -1,13 +1,99 @@
-body{background-color: #eeeeee;
+body{
+    background-color: #eeeeee;
 }
 
-header{background-color: brown;
+header{
+    background-color: brown;
 }
 
-nav{background-color: aquamarine
+nav{
+    background-color: aquamarine
 }
 
-#intro{background-color: lightpink;
+#intro{
+    background-color: lightpink;
 }
 
-.main-section-content h2{background-color:darkkhaki ;}
+.main-section-content h2{
+    background-color:darkkhaki ;
+}
+
+#bestsellers,
+footer{
+    background-color: lightyellow;
+}
+
+header,
+nav,
+#intro,
+#main-section,
+#bestsellers,
+footer{
+    border: 1px solid black;
+}
+
+header,
+nav,
+#main-section{
+    border-radius: 10px;
+}
+
+h1{
+    color: white;
+    font-size: 50px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+h2,
+p{
+    color: #333333;
+}
+
+table,
+th,
+td{
+    border: 1px solid black;
+}
+
+tr:last-child{
+    color: red;
+}
+
+span{
+    color: blue;
+}
+
+.teacher-info{
+    border-radius: 5px;
+}
+
+button{background-color: red;
+       color: white;
+       font-size: 20px;
+       font-weight: bold;
+}
+
+ul{
+    list-style-type: none;
+}
+
+li a{
+    text-decoration: none;
+    color: #333333;
+    font-size: 20px;
+    font-weight: 600;
+}
+
+li a:hover{
+    color: red;
+}
+
+p{
+    font-size: 18px;
+}
+
+h3{
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    text-decoration: underline;
+}
